[package]
name = "example"
version = "0.1.0"
edition = "2024"


[[test]]
name = "itest"
path = "itest/main.rs"
harness = false

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

itest_runner = { path = "../runner" }

testcontainers = { version = "0.25.0", features = ["blocking"] }
