[package]
name = "itest_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
itest_macros = { path = "../macros" }
inventory = "0.3.21"
libtest-mimic = "0.8.1"

testcontainers = { version = "0.25.0" }
tempfile = "3.21.0"
tokio = { version = "1.47.1", default-features = false, features= [] }
async-trait = "0.1.89"
dashmap = "6.1.0"
async-channel = "2.5.0"
anstream = "0.6.21"
anstyle = "1.0.13"
futures = "0.3.31"
