[package]
name = "example_itest"
version = "0.1.0"
edition = "2024"

[[test]]
name = "itest"
path = "itest/main.rs"
harness = false

[dependencies]
example_server = { path = "../server" }
serde_json = "1.0"
itest_runner = { path = "../../runner" }
testcontainers = { version = "0.25.0", features = ["blocking"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
