[package]
name = "example_server"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
tokio = { version = "1.0", features = ["full", "macros"] }
serde_json = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
